# ext-server

./: Cargo.toml  Dockerfile  README.MD  Rocket.toml  download_model.sh
.github/workflows/: publish.yaml
basic-impl/: Cargo.toml  Rocket.toml
basic-impl/data/: config.json
basic-impl/src/: main.rs
specs/: architecture.MD
src/: auth.rs  lib.rs  main.rs  metadata.rs  responses.rs  types.rs
src/route/: metadata.rs  mod.rs  registry.rs  search.rs
src/search/: index.rs  mod.rs  search.rs  token.rs
