[package]
name = "ext-server"
version = "0.1.4"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
zip = "2.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.12.0"
tokio = "1.40.0"
tokenizers = { version = "0.20.0", features = ["http"] }
rust-stemmers = "1.2.0"